--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 BROWSER=FALSE
-PORT=3000
+PORT=3010
 
 REACT_APP_NAME='ReactJS - Projeto Demo - @jeanbarcellos'
+
+REACT_APP_API_URL='https://localhost:44381'
