--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9",
+    "axios": "^0.21.1",
     "date-fns": "^2.23.0",
     "jss": "^10.7.1",
+    "lodash": "^4.17.21",
     "postcss": "^7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
