--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@date-io/date-fns": "2.11.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@hookform/resolvers": "^2.8.8",
     "@mui/icons-material": "^5.3.0",
     "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "^5.3.0",
@@ -21,6 +22,7 @@
     "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.3",
     "react-redux": "^7.2.4",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
@@ -28,7 +30,8 @@
     "redux-thunk": "^2.3.0",
     "tailwindcss": "^3.0.15",
     "tss-react": "^3.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "craco start",
@@ -39,7 +42,7 @@
   "engines": {
     "node": ">=14.0.0",
     "npm": ">=7.0.0"
-},
+  },
   "browserslist": {
     "production": [
       ">0.2%",
