--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.2",
     "axios": "^0.25.0",
     "date-fns": "^2.23.0",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
