--- a/Dockerfile.multistage
+++ b/Dockerfile.multistage
@@ -12,9 +12,7 @@ RUN yarn install --frozen-lockfile
 
 COPY . .
 
-EXPOSE 3000
-
-CMD ["yarn", "start"]
+RUN yarn build
 
 
 # Stage 2 - Publish < -----------------
