--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "project-101.reactjs",
-  "version": "0.1.0",
+  "name": "project-101.frontend-reactjs",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
